Thu Aug 24 12:37:16 BST 2006  Olly Betts <olly@survex.com>

	* scriptindex.cc: Fix handling of check whether a record has content
	  in the case where the same field is processed more than once.

Thu Aug 24 12:35:32 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,docs/scriptindex.txt,loadfile.cc,loadfile.h,
	  scriptindex.cc: Add new "load" action to allow the contents of an
	  external file to be loaded.

Thu Aug 24 12:05:23 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Check for strftime.

Sun Jul 09 01:40:09 BST 2006  Olly Betts <olly@survex.com>

	* docs/omegascript.txt: Note that (by design) an omegascript template
	  can't contain an infinite loop.

Sun May 21 11:42:54 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am: Make use of the dist_ prefix to avoid having to list
	  files in EXTRA_DIST as well as in *_SCRIPTS, *_DATA, and man_MANS.
	* Makefile.am: Prefer $(sysconfdir) to @sysconfdir@ since the former
	  can be overridden on the "make" command line.

Sat May 20 06:16:27 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac: Specify required automake version in
	  the call to AM_INIT_AUTOMAKE in configure.ac.

Thu May 18 14:12:13 BST 2006  Olly Betts <olly@survex.com>

	* docs/overview.txt,docs/quickstart.txt: Use the default path to the
	  database directories in examples.  Tweak the formatting in a few
	  places.  Give a path to the omega CGI binary in the example showing
	  how to run it from the command line.

Wed May 17 15:28:01 BST 2006  Olly Betts <olly@survex.com>

	* omega.spec.in: Fix so that the documentation gets packaged.

Tue May 16 06:56:26 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Remove unused variable from snprintf testing code.

Mon May 15 02:18:01 BST 2006  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Updated for 0.9.6.

Sat May 13 20:43:08 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Update snprintf detection to match xapian-core.
